--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -97,6 +97,45 @@
     color: white;
     border-radius: 4px;
 }
+.cart-items-remove-icon {
+    cursor: pointer;
+}
+/* Quantity Control */
+.cart-qty-control {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.qty-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  background: linear-gradient(135deg, tomato, #ff6a00);
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(255, 99, 71, 0.4);
+  padding: auto;
+}
+
+.qty-btn:hover {
+  transform: scale(1.15);
+  box-shadow: 0 6px 14px rgba(255, 99, 71, 0.6);
+}
+
+.qty-btn:active {
+  transform: scale(0.9);
+}
+
+.qty-count {
+  min-width: 22px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 20px;
+}
 
 @media(max-width:750px) {
     .cart-bottom {
